# noops-dev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  architecture-overview.drawio  buid.sh  check.sh  config-example.yaml  docker-compose.yml  noops.db  noops.sqlite  rust-toolchain.toml
.cargo/: config
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  concept.md  feature.md
.github/workflows/: Untitled-1.sh  release.yml  release_pr.yml  rust.yml
cli/: .gitignore  Cargo.toml  README.md
cli/src/: adapter.rs  client.rs  commands.rs  config.rs  filesystem.rs  lib.rs  main.rs  manifest.rs  module.rs  modules.rs  template.rs  templates.rs  terminal.rs
cli/src/adapter/: cargo.rs  git.rs  golang.rs  mod.rs
cli/src/commands/: build.rs  create.rs  deploy.rs  destroy.rs  init.rs  login.rs  mod.rs  project.rs  show.rs  template.rs
cli/src/deploy/: components.rs  create.rs  delete.rs  mod.rs  plan.rs  update.rs
cli/src/handlers/: auth.rs  diff.rs  mod.rs  modules.rs  project.rs
cli/src/info/: component.rs  mod.rs  project.rs
cli/src/modules/: mod.rs  templates.rs
component-go/: go.mod  main.go
component-go/handler/: handler.c  handler.go  handler.h
component-rust/: Cargo.toml
component-rust/wit/: handler.wit
crates/cli/: Cargo.toml
crates/cli/src/commands/: function.rs
crates/client/: Cargo.toml
crates/client/src/: auth.rs  function.rs  handler.rs  lib.rs  project.rs
crates/common/: Cargo.toml
crates/common/src/: dtos.rs  hash.rs  lib.rs
crates/dtos/: Cargo.toml
crates/dtos/src/: lib.rs
crates/server/: .env  Cargo.toml
crates/server/migrations/2023-07-12-085529_create_projects/: up.sql
crates/server/src/: bindgen.rs  errors.rs
crates/server/src/controller/: auth.rs
crates/server/src/repository/: mod.rs  schema.rs
crates/server/src/service/: project.rs  user.rs
crates/test-components/return-params/src/: lib.rs
crates/test-components/return-status-code-200/src/: lib.rs
dtos/src/: lib.rs
noops-cli/: .gitignore  Cargo.toml  noops-config.yaml
noops-cli/src/: adapter.rs  client.rs  config.rs  filesystem.rs  main.rs  modules.rs  print.rs  templates.rs
noops-cli/src/adapter/: cargo.rs  git.rs  golang.rs  mod.rs
noops-cli/src/config/: mod.rs
noops-cli/src/handlers/: mod.rs  modules.rs  project.rs
noops-cli/src/helpers/: filesystem.rs  mod.rs
noops-cli/src/modules/: mod.rs  templates.rs
noops-cli/src/print/: mod.rs
noops-cli/test/: Cargo.toml  noops-config.yaml
noops-cli/test/golang/: README.md
noops-server/: .gitignore  Cargo.toml
noops-server/src/: bindgen.rs  database.rs  executor.rs  handler.rs  main.rs  schemas.rs
noops-server/src/routes/: errors.rs  execute.rs  functions.rs  mod.rs  project.rs
noops-server/wit/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.wasm
server/: .gitignore  Cargo.toml  README.md  diesel.toml
server/migrations/2023-07-10-124746_create_users/: up.sql
server/migrations/2023-07-12-085529_create_projects/: up.sql
server/migrations/2023-07-14-101830_create_functions/: up.sql
server/migrations/2023-07-14-101830_create_handlers/: up.sql
server/src/: bindgen.rs  database.rs  errors.rs  executor.rs  github.rs  jwt.rs  main.rs  schemas.rs  wasmstore.rs
server/src/controller/: auth.rs  execute.rs  function.rs  handler.rs  mod.rs  project.rs
server/src/database/: function.rs  mod.rs  models.rs  project.rs  schema.rs  sqlite_uuid.rs  user.rs  wasmstore.rs
server/src/repository/: function.rs  handler.rs  mod.rs  project.rs  schema.rs  user.rs
server/src/routes/: auth.rs  errors.rs  execute.rs  function.rs  functions.rs  mod.rs  project.rs
server/src/service/: auth.rs  function.rs  handler.rs  mod.rs  project.rs
test-component/: Cargo.toml
test-component/src/: lib.rs
test-components/return-params/: Cargo.toml
test-components/return-params/src/: lib.rs
test-components/return-status-code-200/: Cargo.toml
test-components/return-status-code-200/src/: lib.rs
wasmstore/: jup4B3W36FgfT29iOFneI.wasm
wit/: handler.wit  wasi_snapshot_preview1.wasm
