[workspace.package]
authors = ["Giom-fm <giom@jfcomputing.io", "Falumpaset <marc@jfcomputing.io"]

[workspace]
members = ["crates/cli", "crates/server", "crates/dtos"]
exclude = ["crates/server/test-components/*"]

[workspace.dependencies]
tempfile = "3.4.0"
lazy_static = "1.4.0"
serde = { version = "1.0.154", features = ["derive"] }
