[package]
name = "noops"
authors.workspace = true
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo"] }
env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.154", features= ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
text_io = "0.1.12"
tokio = { version = "1.26.0", features= ["full"] }
anyhow = "1.0.69"
walkdir = "2.3.3"
console = "0.15.5"
dialoguer = "0.10.4"
lazy_static.workspace = true



[dev-dependencies]
tempfile.workspace = true
