[package]
name = "noops"
authors.workspace = true
version = "0.2.2-pre-0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["cargo", "derive"] }
env_logger = "0.10.0"
log = "0.4.17"
serde.workspace = true
wit-component.workspace = true
serde_json = "1.0.94"
serde_yaml = "0.9.19"
text_io = "0.1.12"
anyhow = "1.0.69"
walkdir = "2.3.3"
console = "0.15.5"
dialoguer = "0.10.4"
lazy_static.workspace = true
tempfile.workspace = true
common = { path = "../crates/common" }
indicatif = "0.17.3"
etcetera = "0.8.0"
client = { version = "0.1.0", path = "../crates/client" }
wit-parser = "0.11.0"
wasm-encoder = "0.32.0"

[dev-dependencies]
indoc = "2.0.1"

