[package]
name = "noops-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.7"
jammdb = "0.9.0"
serde = { version = "1.0.154", features = ["derive"] }
anyhow = "1.0.69"
bincode = "1.3.3"
tokio = { version = "1.26", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmtime = { version = "7.0.0",  features = ["component-model"]}
wasmtime-wasi = "7.0.0"
host =  { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "47b30fd" }
wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "47b30fd" }
poem-openapi = { version = "2.0.26", features = ["swagger-ui"] }
poem = "1.3.55" 
tracing = "0.1.37"
wit-component = "0.7.4"

[dev-dependencies]
lazy_static = "1.4.0"
tempfile = "3.4.0"
