[package]
name = "noops-server"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
anyhow = "1.0.69"
tokio = { version = "1.26", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmtime = { version = "7.0.0", features = ["component-model"] }
wasmtime-wasi = "7.0.0"
host = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "083879c" }
wasi-cap-std-sync = { git = "https://github.com/bytecodealliance/preview2-prototyping", rev = "083879c" }
tracing = "0.1.37"
wit-component = "0.7.4"
axum = { version = "0.6.12", features = ["json", "headers"] }
tower-http = { version = "0.4.0", features = ["trace"] }
dtos = { path = "../crates/dtos" }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
thiserror = "1.0.41"
diesel = { version = "2.1.0", features = [
    "sqlite",
    "r2d2",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1.0"
reqwest = { version = "0.11.18", features = ["json"] }
nanoid = "0.4.0"
faux = "0.1.9"


[dev-dependencies]
lazy_static.workspace = true
tempfile.workspace = true
return-status-code-200 = { path = "../crates/test-components/return-status-code-200", artifact = "cdylib", target = "wasm32-wasi" }
return-params = { path = "../crates/test-components/return-params", artifact = "cdylib", target = "wasm32-wasi" }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
