[package]
name = "noops-server"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
anyhow = "1.0.69"
tokio = { version = "1.26", features = ["full"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmtime = { version = "12.0.0",  features = ["component-model"]}
wasmtime-wasi = "12.0.0"
tracing = "0.1.37"
wit-component.workspace = true
axum = { version = "0.6.12", features = ["json", "headers"] }
tower-http = { version = "0.4.0", features = ["trace"] }
common = { path = "../crates/common" }
jsonwebtoken = "8.3.0"
lazy_static = "1.4.0"
thiserror = "1.0.41"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
reqwest = {version = "0.11.18", features = ["json"] }
nanoid = "0.4.0"
faux = "0.1.9"



[dev-dependencies]
lazy_static.workspace = true
tempfile.workspace = true
return-status-code-200 = { path = "../test-components/return-status-code-200", artifact = "cdylib", target = "wasm32-wasi" }
return-params = { path = "../test-components/return-params", artifact = "cdylib", target = "wasm32-wasi" }

