[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
common = { path = "../common" }
oauth2 = "4.4.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }

